# datacake.ai-newsletter

.github/workflows/: manual.yml
datacake_newsletter/: README.md  pyproject.toml  report.md
datacake_newsletter/src/datacake_newsletter/: crew.py  main.py
datacake_newsletter/src/datacake_newsletter/config/: tasks.yaml
