[project]
name = "datacake_newsletter"
version = "0.1.0"
description = "datacake-newsletter using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
datacake_newsletter = "datacake_newsletter.main:run"
run_crew = "datacake_newsletter.main:run"
train = "datacake_newsletter.main:train"
replay = "datacake_newsletter.main:replay"
test = "datacake_newsletter.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
